# xlib-logger

./: .gitignore  CMakeLists.txt  LICENSE  README.md
asset/: config.toml
include/log_xlib/: definations.hpp  interface.hpp  logger.hpp  loggerEntity.hpp
include/log_xlib/async/: thread_pool.hpp
include/log_xlib/config/: configer.hpp
include/log_xlib/configuration/: configer.hpp
include/log_xlib/core/: loggerEntity.hpp  logger_impl.hpp  sink_manager.hpp
include/log_xlib/logger/: logger_impl.hpp  sink.hpp  sink_dataStructure.hpp
include/log_xlib/sink/: sink.hpp  sink_dataStructure.hpp  sink_factory.hpp
src/: logger.cpp
src/config/: configer.cpp
src/core/: logger_impl.cpp
src/logger/: logger_impl.cpp  sink.cpp
src/sink/: sink.cpp
test/: CMakeLists.txt  logger_test.cpp
